Fixed alignment of syntax highlighted code.  Added some padding so code isnt riding the left edge of the container (a little easier on the eyes).

--- a/css/main.css
+++ b/css/main.css
@@ -300,6 +300,10 @@ div.wrapper {
     margin-top: 0;
 }
 
+pre.prettyprint {
+    padding: 1em;
+}
+
 #InfoBlock hr {
     border-color: #0095D4;
 }
